<resources>
    <string name="app_name">Logica App Kotlin</string>
    <string name="header_condition">Conjunction (AND)</string>
    <string name="header_a">A</string>
    <string name="header_b">B</string>
    <string name="comparison">A ^ B</string>
    <string name="label_true">T</string>
    <string name="label_false">F</string>
    <string name="result">The correct number of answers is %1$d</string>
    <string name="submit">Submit</string>
    <string name="input_description">Answer input</string>
</resources>
